--- a/block/_navbar.scss
+++ b/block/_navbar.scss
@@ -1,75 +1,34 @@
-  @import "./block" ;
-
-  body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Barlow', sans-serif;
-  background-color: #fefcf7; 
-}
-
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem 4rem;
-  background-color: inherit;
-}
+  padding: 20px 40px;
+  background-color: #ffffff;
 
-.logo {
-  display: flex;
-  align-items: center;
-  font-weight: 900;
-  font-size: 1.2rem;
-  color: #333;
-
-  img {
-    margin-right: 0.75rem;
-    height: 24px;
+  .logo img {
+    width: 120px;
+    height: auto;
   }
 
-  span {
-    font-family: 'Fraunces', serif; 
-    color: #333d4b;
-  }
-}
+  .nav-links {
+    display: flex;
+    gap: 30px;
 
-.nav-links {
-  display: flex;
-  gap: 2rem;
+    a {
+      text-decoration: none;
+      color: #747171;
+      font-size: 16px;
+      font-weight: 500;
 
-  a {
-    text-decoration: none;
-    color: #83888f;
-    font-weight: 700;
-    font-size: 0.75rem;
-    letter-spacing: 1px;
-
-    &:hover {
-      color: #333d4b;
+      &:hover {
+        color: #101010; 
+      }
     }
   }
 }
 
 
-.btn {
-  color: text-color;
-  padding: padding;
-  border: none;
-  border-radius: 5px;
-  font-size: 1rem;
-  
 
-  &:hover {
-    opacity: 0.8;
-  }
-
-  
-  &.danger {
-    background-color: danger-color;
-  }
-
-
-}
 
 
 
