--- a/block/_choose.scss
+++ b/block/_choose.scss
@@ -53,3 +53,30 @@
     }
   }
 }
+
+ @media (max-width: 500px) {
+
+
+    .container {
+      padding: 0 20px;
+
+      .features {
+        flex-direction: column;
+        align-items: center;
+
+        .card {
+          width: 100%;
+          max-width: 300px;
+        }
+      }
+    }
+
+    h2 {
+      font-size: 24px;
+    }
+
+    .description {
+      font-size: 14px;
+      line-height: 22px;
+    }
+  }
